--- a/decidim-core-extended/config/locales/pl.yml
+++ b/decidim-core-extended/config/locales/pl.yml
@@ -21,7 +21,11 @@ pl:
         new:
           rodo_agreements: |-
             Zapoznałem/am się z zasadami przetwarzania moich danych osobowych.<br>
-            Na podstawie art. 6 ust. 1 lit. a) Rozporządzenia Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 roku w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie swobodnego przepływu takich danych oraz uchylenia Dyrektywy 95/46/WE (Ogólne Rozporządzenie o Ochronie Danych) z dnia 27 kwietnia 2016 roku, (Dz.Urz.UE.L Nr 119, strona 1) wyrażam zgodę na przetwarzanie moich danych osobowych przez Laboratorium Innowacji Społecznych w celu realizacji Budżetu Obywatelskiego 2020 w Gdyni w zakresie imienia i nazwiska, nazwy konta oraz adresu e-mail.<br>
+            Wyrażam zgodę na przetwarzanie moich danych osobowych przez Laboratorium Innowacji Społecznych w celu realizacji Budżetu Obywatelskiego 2020 w Gdyni w zakresie imienia
+            i nazwiska, nazwy konta oraz adresu e-mail, na podstawie art. 6 ust. 1 lit. a) Rozporządzenia Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 roku
+            w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie swobodnego przepływu takich danych oraz uchylenia Dyrektywy 95/46/WE (Ogólne
+            Rozporządzenie o Ochronie Danych) z dnia 27 kwietnia 2016 roku, (Dz.Urz.UE.L Nr 119, strona 1) wyrażam zgodę na przetwarzanie moich danych osobowych przez
+            Laboratorium Innowacji Społecznych w celu realizacji Budżetu Obywatelskiego 2020 w Gdyni w zakresie imienia i nazwiska, nazwy konta oraz adresu e-mail.<br>
             Więcej na temat przetwarzania Twoich danych osobowych znajdziesz %{link}.
           rodo_link: tutaj
     group:
