--- a/decidim-core-extended/config/locales/pl.yml
+++ b/decidim-core-extended/config/locales/pl.yml
@@ -11,6 +11,8 @@ pl:
         gender: Pleć
         birth_year: Rok urodzenia
         district: Dzielnica
+        inhabitant_card_number: Numer karty mieszkańca
+        inhabitant_card_number_error: Dane nie zostaly potwierdzone przez platformę Karta Mieszkańca
         genders:
           female: Kobieta
           male: Mężczyzna
@@ -86,6 +88,10 @@ pl:
       show:
         areas: Kategorie
         scopes: Zakresy
+    inhabitant_card_authorization:
+      authenticate:
+        success: Pomyślnie autoryzowano
+        invalid: Popraw błędy w formularzu
   devise:
     contact_for_help_info: "Jeśli potrzebujesz pomocy skontaktuj się z nami pisząc na adres e-mail: %{email}."
   layouts:
@@ -93,5 +99,7 @@ pl:
       user_profile:
         change_password: Zmień hasło
         inhabitant_card_authorization: Autoryzacja kartą mieszkańca
+        inhabitant_card_authorization_text: Twoje konto zostało zautoryzowane przy pomocy karty mieszkańca
+        inhabitant_card_authorization_success: Autoryzowano
       footer:
         ue_logotypes: Logotypy UE
