--- a/decidim-core-extended/config/locales/pl.yml
+++ b/decidim-core-extended/config/locales/pl.yml
@@ -12,6 +12,7 @@ pl:
         birth_year: Rok urodzenia
         district: Dzielnica
         inhabitant_card_number: Numer karty mieszkańca
+        card_number: Numer karty mieszkańca
         inhabitant_card_number_error: Dane nie zostaly potwierdzone przez platformę Karta Mieszkańca
         genders:
           female: Kobieta
@@ -69,6 +70,8 @@ pl:
             Laboratorium Innowacji Społecznych w celu realizacji Budżetu Obywatelskiego 2020 w Gdyni w zakresie imienia i nazwiska, nazwy konta oraz adresu e-mail.<br>
             Więcej na temat przetwarzania Twoich danych osobowych znajdziesz %{link}.
           rodo_link: tutaj
+          show_inhabitant: Zarejestruj się kartą mieszkańca
+          show_default: Zarejestruj się klasycznie
     group:
       delete:
         alert: Nie można cofnąć tej czynności.
