trello card: 145 - changes after verification

--- a/decidim-surveys_extended/config/locales/pl.yml
+++ b/decidim-surveys_extended/config/locales/pl.yml
@@ -2,7 +2,7 @@ pl:
   activemodel:
     attributes:
       question:
-        scope_no_answer: nie dotyczy, nie mieszkam w Gdyni
+        scope_no_answer: Nie dotyczy, nie mieszkam w Gdyni
   decidim:
     components:
       surveys:
