trello card: 165 - content blocks change

--- a/decidim-core-extended/config/locales/pl.yml
+++ b/decidim-core-extended/config/locales/pl.yml
@@ -83,6 +83,19 @@ pl:
           close: Zamknij
           question: Czy na pewno chcesz usunąć grupę?
           title: Usuń moją grupę
+    pages:
+      home:
+        extended:
+          what_can_i_do: Co mogę zrobić na platformie?
+          assemblies: Zaspoły
+          assemblies_explanation: Zobacz kiedy odbywają się posiedzenia zespołów i co było na nich omawiane.
+          assemblies_link: Przejdź do procesów
+          help: Niezbędnik dialogu
+          help_explanation: Dowiedz się więcej o dialogu w mieście i skorzystaj z pomocy.
+          help_link: Skorzystaj z niezbędnika dialogu
+          processes: Procesy
+          processes_explanation: Na platformie możesz znaleźć wszystkie procesy dialogowe dziejące się w mieście.
+          processes_link: Przejdź do zespołów
     profiles:
       user:
         delete_group: Usuń grupę
