--- a/decidim-core-extended/config/locales/pl.yml
+++ b/decidim-core-extended/config/locales/pl.yml
@@ -86,7 +86,7 @@ pl:
     pages:
       home:
         extended:
-          what_can_i_do: Co mogę zrobić na platformie?
+          what_can_i_do: Co mogę zrobić na Platformie?
           assemblies: Zespoły
           assemblies_explanation: Zobacz kiedy odbywają się posiedzenia zespołów i co było na nich omawiane.
           assemblies_link: Przejdź do zespołów
